# psp-vita-tetris

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  sdl_assets_loader.cpp  sdl_starter.cpp  sdl_starter.h
